--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXLIB_DIR_324)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -93,7 +93,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXLIB_DIR_324)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -110,7 +110,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXLIB_DIR_324)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -128,7 +128,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXLIB_DIR_324)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib/</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -166,6 +166,51 @@
     <ClCompile Include="Src\Scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Lib\nlohmann\adl_serializer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\byte_container_with_subtype.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\abi_macros.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\from_json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\to_chars.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\conversions\to_json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\exceptions.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\hash.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\binary_reader.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\input_adapters.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\json_sax.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\lexer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\parser.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\input\position_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\internal_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iteration_proxy.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iterator_traits.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\iter_impl.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\json_reverse_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\iterators\primitive_iterator.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_custom_base_class.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_pointer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\json_ref.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\macro_scope.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\macro_unscope.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\call_std\begin.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\call_std\end.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\cpp_future.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\detected.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\identity_tag.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\is_sax.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\std_fs.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\type_traits.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\meta\void_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\binary_writer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\output_adapters.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\output\serializer.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\string_concat.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\string_escape.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\detail\value_t.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\json.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\json_fwd.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\ordered_map.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\thirdparty\hedley\hedley.hpp" />
+    <ClInclude Include="Src\Lib\nlohmann\thirdparty\hedley\hedley_undef.hpp" />
     <ClInclude Include="Src\Object\Enemy.h" />
     <ClInclude Include="Src\Object\Common\AnimationController.h" />
     <ClInclude Include="Src\Object\Common\InputController.h" />
