プレイヤーと敵同士が重ならないようにする処理を書いてる途中

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=856,206
+Pos=919,664
 Size=382,322
+Collapsed=1
+
+[Window][Enemy]
+Pos=60,59
+Size=322,238
 Collapsed=0
 
