--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=13,324
+Pos=816,23
 Size=382,322
-Collapsed=1
+Collapsed=0
 
 [Window][Enemy]
-Pos=28,459
+Pos=817,47
 Size=322,329
-Collapsed=0
+Collapsed=1
+
+[Window][Camera]
+Pos=815,0
+Size=461,194
+Collapsed=1
 
