--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -141,6 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Component\Component.cpp" />
+    <ClCompile Include="Src\Component\InputComponent.cpp" />
     <ClCompile Include="Src\Lib\ImGui\backends\imgui_impl_dx11.cpp" />
     <ClCompile Include="Src\Lib\ImGui\backends\imgui_impl_win32.cpp" />
     <ClCompile Include="Src\Lib\ImGui\imgui.cpp" />
@@ -177,6 +179,8 @@
     <ClCompile Include="Src\Object\Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Component\Component.h" />
+    <ClInclude Include="Src\Component\InputComponent.h" />
     <ClInclude Include="Src\Lib\ImGui\backends\imgui_impl_dx11.h" />
     <ClInclude Include="Src\Lib\ImGui\backends\imgui_impl_win32.h" />
     <ClInclude Include="Src\Lib\ImGui\imconfig.h" />
