--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClCompile Include="Src\Component\Component.cpp" />
     <ClCompile Include="Src\Component\InputComponent.cpp" />
+    <ClCompile Include="Src\Component\MoveComponent.cpp" />
     <ClCompile Include="Src\Lib\ImGui\backends\imgui_impl_dx11.cpp" />
     <ClCompile Include="Src\Lib\ImGui\backends\imgui_impl_win32.cpp" />
     <ClCompile Include="Src\Lib\ImGui\imgui.cpp" />
@@ -181,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="Src\Component\Component.h" />
     <ClInclude Include="Src\Component\InputComponent.h" />
+    <ClInclude Include="Src\Component\MoveComponent.h" />
     <ClInclude Include="Src\Lib\ImGui\backends\imgui_impl_dx11.h" />
     <ClInclude Include="Src\Lib\ImGui\backends\imgui_impl_win32.h" />
     <ClInclude Include="Src\Lib\ImGui\imconfig.h" />
