ステージとカメラの当たり判定を実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=813,23
+Pos=815,-40
 Size=382,322
-Collapsed=1
+Collapsed=0
 
 [Window][Enemy]
 Pos=817,47
@@ -14,7 +14,7 @@ Size=322,329
 Collapsed=1
 
 [Window][Camera]
-Pos=815,0
+Pos=790,238
 Size=461,194
 Collapsed=0
 
