--- a/imgui.ini
+++ b/imgui.ini
@@ -4,17 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Player]
-Pos=815,-40
+Pos=895,16
 Size=382,322
 Collapsed=0
 
 [Window][Enemy]
 Pos=817,47
 Size=322,329
-Collapsed=1
+Collapsed=0
 
 [Window][Camera]
-Pos=790,238
+Pos=890,40
 Size=461,194
+Collapsed=1
+
+[Window][Stage]
+Pos=60,60
+Size=362,174
+Collapsed=0
+
+[Window][Boss]
+Pos=63,67
+Size=422,207
 Collapsed=0
 
