光の壁を作る

--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -159,6 +159,8 @@
     <ClCompile Include="Src\Object\Boss.cpp" />
     <ClCompile Include="Src\Object\Common\ActorCreate.cpp" />
     <ClCompile Include="Src\Object\Common\EffekseerController.cpp" />
+    <ClCompile Include="Src\Object\Common\ModelMaterial.cpp" />
+    <ClCompile Include="Src\Object\Common\Renderer.cpp" />
     <ClCompile Include="Src\Object\Enemy.cpp" />
     <ClCompile Include="Src\Object\Common\AnimationController.cpp" />
     <ClCompile Include="Src\Object\Common\InputController.cpp" />
@@ -252,6 +254,8 @@
     <ClInclude Include="Src\Object\BossState.h" />
     <ClInclude Include="Src\Object\Common\ActorCreate.h" />
     <ClInclude Include="Src\Object\Common\EffekseerController.h" />
+    <ClInclude Include="Src\Object\Common\ModelMaterial.h" />
+    <ClInclude Include="Src\Object\Common\Renderer.h" />
     <ClInclude Include="Src\Object\Enemy.h" />
     <ClInclude Include="Src\Object\Common\AnimationController.h" />
     <ClInclude Include="Src\Object\Common\InputController.h" />
