--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -146,6 +146,8 @@
     <ClCompile Include="Src\Object\BossAppearanceBoss.cpp" />
     <ClCompile Include="Src\Object\Common\CreateBase.cpp" />
     <ClCompile Include="Src\Object\Common\BossAppearanceCreate.cpp" />
+    <ClCompile Include="Src\Object\Common\GameClearActorCreate.cpp" />
+    <ClCompile Include="Src\Object\GameClearPlayer.cpp" />
     <ClCompile Include="Src\Scene\BossAppearanceScene.cpp" />
     <ClCompile Include="Src\Object\Area5Collision.cpp" />
     <ClCompile Include="Src\Object\Area4Collision.cpp" />
@@ -180,6 +182,7 @@
     <ClCompile Include="Src\Manager\ActorManager.cpp" />
     <ClCompile Include="Src\Object\ActorBase.cpp" />
     <ClCompile Include="Src\Scene\BossBattleScene.cpp" />
+    <ClCompile Include="Src\Scene\GameClearScene.cpp" />
     <ClCompile Include="Src\Scene\GameScene.cpp" />
     <ClCompile Include="Src\Application.cpp" />
     <ClCompile Include="Src\Common\Fader.cpp" />
@@ -209,6 +212,8 @@
     <ClInclude Include="Src\Object\BossAppearanceBoss.h" />
     <ClInclude Include="Src\Object\Common\CreateBase.h" />
     <ClInclude Include="Src\Object\Common\BossAppearanceCreate.h" />
+    <ClInclude Include="Src\Object\Common\GameClearActorCreate.h" />
+    <ClInclude Include="Src\Object\GameClearPlayer.h" />
     <ClInclude Include="Src\Scene\BossAppearanceScene.h" />
     <ClInclude Include="Src\Object\Area5Collision.h" />
     <ClInclude Include="Src\Object\Area4Collision.h" />
@@ -293,6 +298,7 @@
     <ClInclude Include="Src\Object\ActorBase.h" />
     <ClInclude Include="Src\Object\PlayerState.h" />
     <ClInclude Include="Src\Scene\BossBattleScene.h" />
+    <ClInclude Include="Src\Scene\GameClearScene.h" />
     <ClInclude Include="Src\Scene\GameScene.h" />
     <ClInclude Include="Src\Application.h" />
     <ClInclude Include="Src\Common\Fader.h" />
