--- a/AGS2025winter.vcxproj
+++ b/AGS2025winter.vcxproj
@@ -113,6 +113,8 @@
       <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <UndefinePreprocessorDefinitions>
+      </UndefinePreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -131,6 +133,8 @@
       <AdditionalIncludeDirectories>$(DXLIB_DIR_324);$(ProjectDir)Src/Lib</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <UndefinePreprocessorDefinitions>
+      </UndefinePreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
